Add Instances Permission

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -177,6 +177,7 @@ roles:
         compute:regions: [create,read,update,delete]
         compute:flavors: [create,read,update,delete]
         compute:images: [create,read,update,delete]
+        compute:instances: [create,read,update,delete]
         compute:clusters: [create,read,update,delete]
         application:applications: [create,read,update,delete]
         application:applicationsets: [create,read,update,delete]
@@ -242,6 +243,7 @@ roles:
         compute:regions: [read]
         compute:flavors: [read]
         compute:images: [read]
+        compute:instances: [create,read,update,delete]
         compute:clusters: [create,read,update,delete]
         application:applications: [read]
         application:applicationsets: [create,read,update,delete]
@@ -265,6 +267,7 @@ roles:
         region:securitygroups:v2: [create,read,update,delete]
         kubernetes:clusters: [create,read,update,delete]
         kubernetes:virtualclusters: [create,read,update,delete]
+        compute:instances: [create,read,update,delete]
         compute:clusters: [create,read,update,delete]
         application:applications: [read]
         application:applicationsets: [create,read,update,delete]
@@ -288,6 +291,7 @@ roles:
         region:securitygroups:v2: [read]
         kubernetes:clusters: [read]
         kubernetes:virtualclusters: [read]
+        compute:instances: [read]
         compute:clusters: [read]
         application:applications: [read]
         application:applicationsets: [read]
