feat: add file storage RBAC permissions to default roles

--- a/charts/identity/values.yaml
+++ b/charts/identity/values.yaml
@@ -168,6 +168,8 @@ roles:
         region:securitygroups:v2: [create,read,update,delete]
         region:servers: [create,read,update,delete]
         region:servers:v2: [create,read,update,delete]
+        region:filestorage:v2: [create,read,update,delete]
+        region:filestorageclass:v2: [create,read,update,delete]
         kubernetes:regions: [create,read,update,delete]
         kubernetes:flavors: [create,read,update,delete]
         kubernetes:images: [create,read,update,delete]
@@ -234,6 +236,8 @@ roles:
         identity:quotas: [read]
         region:regions: [read]
         region:networks:v2: [create,read,update,delete]
+        region:filestorage:v2: [create,read,update,delete]
+        region:filestorageclass:v2: [read]
         region:securitygroups:v2: [create,read,update,delete]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
@@ -255,6 +259,7 @@ roles:
       organization:
         identity:quotas: [read]
         region:regions: [read]
+        region:filestorageclass:v2: [read]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
         kubernetes:images: [read]
@@ -265,6 +270,7 @@ roles:
         identity:projects: [read]
         region:networks:v2: [create,read,update,delete]
         region:securitygroups:v2: [create,read,update,delete]
+        region:filestorage:v2: [create,read,update,delete]
         kubernetes:clusters: [create,read,update,delete]
         kubernetes:virtualclusters: [create,read,update,delete]
         compute:instances: [create,read,update,delete]
@@ -279,6 +285,7 @@ roles:
       organization:
         identity:quotas: [read]
         region:regions: [read]
+        region:filestorageclass:v2: [read]
         kubernetes:regions: [read]
         kubernetes:flavors: [read]
         kubernetes:images: [read]
@@ -289,6 +296,7 @@ roles:
         identity:projects: [read]
         region:networks:v2: [read]
         region:securitygroups:v2: [read]
+        region:filestorage:v2: [read]
         kubernetes:clusters: [read]
         kubernetes:virtualclusters: [read]
         compute:instances: [read]
