Allow Extra API Flags
And also some file that was added broke developement tooling that tried
to infer the correct Helm repo name, so I've removed this and linked it
back to a global developer hub.

--- a/charts/identity/templates/identity/deployment.yaml
+++ b/charts/identity/templates/identity/deployment.yaml
@@ -65,6 +65,9 @@ spec:
             {{- end }}
           {{- end }}
         {{- end }}
+        {{- range $i, $arg := .Values.server.extraFlags }}
+        - {{ $arg }}
+        {{- end }}
         ports:
         - name: http
           containerPort: 6080
