feat: enable organisation-level allocations

--- a/pkg/openapi/server.spec.yaml
+++ b/pkg/openapi/server.spec.yaml
@@ -1021,6 +1021,92 @@ paths:
           $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/notFoundResponse'
         '500':
           $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+    post:
+      x-hidden: true
+      description: |-
+        Creates an allocation.
+      security:
+      - oauth2Authentication: []
+      requestBody:
+        $ref: '#/components/requestBodies/allocationCreateRequest'
+      responses:
+        '201':
+          $ref: '#/components/responses/allocationResponse'
+        '400':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/badRequestResponse'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '409':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/conflictResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+  /api/v1/organizations/{organizationID}/allocations/{allocationID}:
+    description: |-
+      Management of allocations.  Allocations form slices of quotas and in total never
+      exceed the quotas in the scope the quota is defined for.  Individual services will
+      create allocations when a request for infrastructure is received to check that
+      request can be fulfilled, then release those resources when the infrastructure is
+      deleted.
+    parameters:
+    - $ref: '#/components/parameters/organizationIDParameter'
+    - $ref: '#/components/parameters/allocationIDParameter'
+    get:
+      x-hidden: true
+      description: |-
+        Gets an allocation.
+      security:
+      - oauth2Authentication: []
+      responses:
+        '200':
+          $ref: '#/components/responses/allocationResponse'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '404':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/notFoundResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+    put:
+      x-hidden: true
+      description: |-
+        Updates an allocation.
+      security:
+      - oauth2Authentication: []
+      requestBody:
+        $ref: '#/components/requestBodies/allocationUpdateRequest'
+      responses:
+        '200':
+          $ref: '#/components/responses/allocationResponse'
+        '400':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/badRequestResponse'
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '404':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/notFoundResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
+    delete:
+      x-hidden: true
+      description: |-
+        Deletes an allocation.
+      security:
+      - oauth2Authentication: []
+      responses:
+        '202':
+          description: Allocation successfully deleted.
+        '401':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/unauthorizedResponse'
+        '403':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/forbiddenResponse'
+        '404':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/notFoundResponse'
+        '500':
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/responses/internalServerErrorResponse'
   /api/v1/organizations/{organizationID}/projects/{projectID}/allocations:
     description: |-
       Management of allocations.  Allocations form slices of quotas and in total never
@@ -2227,7 +2313,7 @@ components:
       - spec
       properties:
         metadata:
-          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/projectScopedResourceReadMetadata'
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/alansy/inst-316/pkg/openapi/common.spec.yaml#/components/schemas/maybeProjectScopedResourceReadMetadata'
         spec:
           $ref: '#/components/schemas/allocationSpec'
     allocations:
@@ -2246,6 +2332,64 @@ components:
           $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/resourceWriteMetadata'
         spec:
           $ref: '#/components/schemas/allocationSpec'
+    allocationCreateSpec:
+      description: Request parameters for creating an allocation.
+      type: object
+      required:
+      - projectId
+      - kind
+      - id
+      - allocations
+      properties:
+        projectId:
+          description: The project ID that owns this allocation.
+          type: string
+        kind:
+          description: The resource kind that owns this allocation.
+          type: string
+        id:
+          description: The resource ID that owns this allocation.
+          type: string
+        allocations:
+          $ref: '#/components/schemas/resourceAllocationList'
+    allocationCreate:
+      description: An allocation creation request.
+      type: object
+      required:
+      - metadata
+      - spec
+      properties:
+        metadata:
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/resourceWriteMetadata'
+        spec:
+          $ref: '#/components/schemas/allocationCreateSpec'
+    allocationUpdateSpec:
+      description: Request parameters for updating an allocation.
+      type: object
+      required:
+        - kind
+        - id
+        - allocations
+      properties:
+        kind:
+          description: The resource kind that owns this allocation.
+          type: string
+        id:
+          description: The resource ID that owns this allocation.
+          type: string
+        allocations:
+          $ref: '#/components/schemas/resourceAllocationList'
+    allocationUpdate:
+      description: An allocation update request.
+      type: object
+      required:
+      - metadata
+      - spec
+      properties:
+        metadata:
+          $ref: 'https://raw.githubusercontent.com/unikorn-cloud/core/main/pkg/openapi/common.spec.yaml#/components/schemas/resourceWriteMetadata'
+        spec:
+          $ref: '#/components/schemas/allocationUpdateSpec'
   requestBodies:
     authorizationRequest:
       description: OIDC authentication request.
@@ -2450,6 +2594,47 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/allocationWrite'
+          example:
+            metadata:
+              name: undefined
+            spec:
+              kind: kubernetescluster
+              id: a4e7fddc-4812-4bfa-94b4-2b1174ac7e0e
+              allocations:
+              - kind: clusters
+                committed: 1
+                reserved: 0
+              - kind: servers
+                committed: 3
+                reserved: 10
+    allocationCreateRequest:
+      description: Creates a resource allocation.
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/allocationCreate'
+          example:
+            metadata:
+              name: undefined
+            spec:
+              projectId: e36c058a-8eba-4f5b-91f4-f6ffb983795c
+              kind: kubernetescluster
+              id: a4e7fddc-4812-4bfa-94b4-2b1174ac7e0e
+              allocations:
+              - kind: clusters
+                committed: 1
+                reserved: 0
+              - kind: servers
+                committed: 3
+                reserved: 10
+    allocationUpdateRequest:
+      description: Updates a resource allocation.
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/allocationUpdate'
           example:
             metadata:
               name: undefined
